# TALOS

./: .gitignore  README.md  docker-compose.yml  github-manifest.yaml  repomix.config.json
api/: .env.example  Dockerfile  debug_auth.py  pyproject.toml  test_jwt.py  trigger_test.py
api/app/: main.py
api/app/core/: agent.py  event_bus.py  github_auth.py  key_manager.py  repomix.py  sandbox.py  security.py  visual_cortex.py
api/app/db/: supabase.py
api/app/routes/: __init__.py  chat.py  events.py  installations.py  runs.py  stats.py
api/db/: schema.sql
web/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/api/auth/callback/github/: route.ts
web/app/api/auth/login/: route.ts
web/app/api/auth/session/: route.ts
web/app/api/stats/: route.ts
web/app/dashboard/: page.tsx
web/app/repositories/: page.tsx
web/components/: install-button.tsx  talos-ai-chat.tsx  timeline.tsx
